<resources>
    <string name="app_name" translatable="false">LinkVault</string>

    <string name="title_links">Links</string>
    <string name="title_categories">Categories</string>
    <string name="title_categoryLinks">Category Links</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>

    <string name="item_title">Title</string>
    <string name="item_category">Category</string>
    <string name="item_url">Url</string>
    <string name="item_add">Add</string>
    <string name="item_search">Search</string>
    <string name="item_more">More</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>
    <string name="item_share">Share</string>
    <string name="item_shortcut">Create shortcut</string>
    <string name="item_copy">Copy</string>
    <string name="item_sort">Sort</string>
    <string name="item_move">Move</string>

    <string name="text_create">Create</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_update">Update</string>
    <string name="text_move">Move links</string>
    <string name="text_order">Order by</string>
    <string name="text_open_category">Open category</string>
    <string name="text_list_category">Category list</string>
    <string name="text_list_favorites">Favorite list</string>
    <string name="text_list_links">Link list</string>
    <string name="text_list_private">Private link list</string>
    <string name="text_list_category_links">Links in category list</string>
    <string name="text_close_dialog">Close window</string>
    <string name="text_select_language">Select language</string>
    <string name="text_create_link">Create new link</string>
    <string name="text_create_category">Create new category</string>
    <string name="text_modify_link">Edit link</string>
    <string name="text_modify_category">Edit category</string>
    <string name="text_add_favorite">Add to favorite</string>
    <string name="text_add_private">Add to private</string>
    <string name="text_data_deleted">All data deleted</string>
    <string name="text_delete_link">Do you want to delete this link permanently?</string>
    <string name="text_delete_category">Do you want to delete this category permanently?</string>
    <string name="text_delete_category_links">All links associated with this category will be deleted.</string>
    <string name="text_delete_all_data">Are you sure you want to delete all data?</string>
    <string name="text_placeholder" translatable="false">Text placeholder</string>
    <string name="text_clipboard">URL copied to clipboard</string>
    <string name="text_no_links">No links were added yet.</string>
    <string name="text_no_categories">No categories were added yet.</string>
    <string name="text_sort_title">By title</string>
    <string name="text_sort_newest">By newest</string>
    <string name="text_sort_oldest">By oldest</string>
    <string name="text_no_links_in_category">There are no links to share in this category</string>
    <string name="text_move_items_to_category">Choose a category to move the selected links</string>
    <string name="text_private_links">Access to private links</string>
    <string name="text_confirm_identity">Confirm your identity</string>
    <string name="text_wrong_version">Versions prior to Android 9 are not supported</string>
    <string name="text_export_correct">File stored in</string>
    <string name="text_import_correct">Import successfully completed</string>

    <string name="error_title_link_empty">The link title is empty</string>
    <string name="error_title_category_empty">The category title is empty</string>
    <string name="error_url_empty">The link url is empty</string>
    <string name="error_url_not_valid">The link url is not valid</string>
    <string name="error_category_empty">No category has been selected</string>
    <string name="error_db_link">An error occurred while creating the link</string>
    <string name="error_db_category">An error occurred while creating the category</string>
    <string name="error_db_repeated_category">A category with that name already exists</string>
    <string name="error_no_links_selected">No link selected</string>
    <string name="error_export">An error occurred while exporting data</string>
    <string name="error_import">An error occurred while importing data</string>
    <string name="error_export_permission">Permission required on external storage</string>
    <string name="error_send_suggestion">No mail application was found</string>

    <string name="default_category0">No category</string>
    <string name="default_category1">School</string>
    <string name="default_category2">Work</string>
    <string name="default_category3">Social networks</string>
    <string name="default_category4">Sports</string>
    <string name="default_category5">Media</string>
    <string name="default_category6">Others</string>

    <string name="setting_language">Language</string>
    <string name="setting_dark_mode">Dark mode</string>
    <string name="setting_private_links">Private links</string>
    <string name="setting_export_links">Export links</string>
    <string name="setting_import_links">Import links</string>
    <string name="setting_delete_data">Delete all data</string>
    <string name="setting_contact">Send a suggestion</string>
    <string name="setting_rate_app">Rate the app</string>
    <string name="setting_more_apps">More apps</string>
    <string name="setting_version">Version</string>

    <string name="language_spanish">Spanish</string>
    <string name="language_english">English</string>

</resources>