<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_links">

    <fragment
        android:id="@+id/navigation_links"
        android:name="com.breathink.linkvault.ui.links.LinksFragment"
        android:label="@string/title_links"
        tools:layout="@layout/fragment_links" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.breathink.linkvault.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.breathink.linkvault.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.breathink.linkvault.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>