<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/modal_background"
    android:orientation="vertical"
    android:paddingLeft="23dp"
    android:paddingRight="23dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_create_link"
        android:text="@string/text_create_link"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_description_24dp"
        android:layout_marginTop="15dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_title_link"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_links_24dp"
        app:endIconTint="@color/primaryBlue"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_url_link"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/item_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:startIconDrawable="@drawable/ic_categories_24dp"
            app:endIconTint="@color/primaryBlue"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1" >

        <AutoCompleteTextView
            android:id="@+id/auto_complete_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/bt_create_category_inlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_create_category"
            android:text=""
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_add_circle_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <CheckBox
            android:id="@+id/cb_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_add_favorite"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_add_private"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancel_link"
            android:text="@string/text_cancel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_create_link"
            android:text="@string/text_create"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>