<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modal_background"
    android:orientation="vertical"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:paddingStart="15dp"
    android:backgroundTint="@color/white_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_language_title"
        android:text="@string/text_select_language"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp" />

    <RadioGroup
        android:id="@+id/rg_language_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="5dp" >

        <RadioButton
            android:id="@+id/rb_spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/language_spanish" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/language_english" />

    </RadioGroup>

</LinearLayout>