<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modal_background"
    android:orientation="vertical"
    android:paddingLeft="23dp"
    android:paddingRight="23dp"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_delete_text"
        android:text="@string/text_delete_link"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancel_delete"
            android:text="@string/text_cancel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_confirm_delete"
            android:text="@string/item_delete"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>