<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modal_background"
    android:orientation="vertical"
    android:paddingLeft="23dp"
    android:paddingRight="23dp"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_move_text"
        android:text="@string/text_move_items_to_category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:startIconDrawable="@drawable/ic_categories_24dp"
        app:endIconTint="@color/primaryBlue"
        android:layout_marginTop="15dp">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_textView_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancel_move"
            android:text="@string/text_cancel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_confirm_move"
            android:text="@string/item_move"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>